[package]
name = "planner-database"
version = "0.1.0"
authors = ["andrewdonald"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
redis = "0.19.0"
serde = "1.0"
serde_derive = "1.0"
futures-util = "0.3.12"
nanoid = "0.3.0"